<resources>
    <string name="app_name">mtaa_strbakd_hanzelt</string>
    <string name="aktivity_v_okol">Aktivity v okolí</string>
    <string name="vyh_ada">Vyhľadať</string>
    <string name="prida_aktivitu">Pridať aktivitu</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="meno">Meno</string>
    <string name="m_j_profil">Môj profil</string>
    <string name="e_mail">E-mail</string>
    <string name="zmenit_udaje">Zmeniť údaje</string>
    <string name="zmazat_ucet">Zmazať účet</string>
    <string name="registracia">Registrácia</string>
    <string name="zmena_udajov">Zmena údajov</string>
    <string name="novy_email">Nový e-mail</string>
    <string name="pridat_aktivitu">Pridať aktivitu</string>
    <string name="mesto">Mesto</string>
    <string name="nazov">Názov</string>
    <string name="adresa">Adresa</string>
    <string name="popis">Popis</string>
    <string name="odhlasit">Odhlásiť</string>
    <string name="prihlasit">Prihlásiť</string>
    <string name="zaregistrovat">Zaregistrovať</string>
</resources>